--- a/web/index.html
+++ b/web/index.html
@@ -22,7 +22,7 @@
   </style>
 </head>
 <script type="module">
-  import init from './barty.js'
+  import init from './bartholomuegh.js'
   init()
 </script>
 
